# trace

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  trace.py  trc_main.py
.trace/: issues.jsonl
docs/: ai-agent-guide.md  cli-design.md  design-decisions.md  development-history.md  implementation-plan.md  key-features.md  original-beads-design.md  product-vision.md  quickstart.md  use-cases.md
tests/: __init__.py  conftest.py  test_cli.py  test_comments.py  test_cross_project_contamination.py  test_db.py  test_dependencies.py  test_dependency_messages.py  test_ids.py  test_initialization_safety.py  test_integration.py  test_isolation.py  test_issues.py  test_locking.py  test_portable_project_ids.py  test_project_resolution.py  test_projects.py  test_queries.py  test_reorganization.py  test_sync.py  test_uuid_project_identification.py  test_uuid_utils.py
trace_core/: __init__.py  cli.py  comments.py  constants.py  contamination.py  db.py  dependencies.py  exceptions.py  ids.py  issues.py  projects.py  reorganization.py  sync.py  utils.py
