[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trc"
version = "0.2.3"
description = "Minimal distributed issue tracker for AI agent workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
trc = "trc_main:main"

[tool.hatch.build.targets.wheel]
packages = ["trace_core", "trc_main.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
